<resources>
    <string name="api_address">http://it-ebooks-api.info/v1/</string>

    <string name="app_name">It-ebooks</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="sample_title">Python</string>

    <string name="default_error_text">Error occurred</string>
    <string name="check_internet_connectivity">check internet connectivity</string>

    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="title_activity_search_result">SearchResultActivity</string>

    <string name="description">description</string>
    <string name="loading">Loading</string>
    <string name="book_title">Book title</string>

    <string name="error">Something went wrong, try again.</string>

    <!-- Book Details -->
    <string name="book_details">Book details</string>
    <string name="publisher">Publisher:</string>
    <string name="by">By:</string>
    <string name="isbn">ISBN:</string>
    <string name="year">Year:</string>
    <string name="pages">Pages:</string>
    <string name="language">Language:</string>
    <string name="file_size">File size:</string>
    <string name="file_format">File format:</string>
    <string name="action_search">search</string>
    <string name="search_hint">Enter ebook title</string>
    <string name="image_content_description">it-ebooks</string>
    <string name="hey">Hey!</string>
    <string name="do_things">Click the button and enter book title.</string>

</resources>
