<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:visibility="visible"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:contentDescription="@string/image_content_description"
        android:src="@drawable/ite"
        android:scaleType="centerInside"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"/>

    <TextView
        android:textSize="@dimen/size_28sp"
        android:text="@string/hey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_gravity="center_horizontal|top"/>

    <TextView
        android:textSize="@dimen/size_18sp"
        android:text="@string/do_things"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="86dp"
        android:layout_gravity="center_horizontal|bottom"/>

</FrameLayout>