<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.gratitude.it_ebooks.application.activities.DetailsActivity"
    tools:showIn="@layout/activity_details">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            android:ellipsize="end"
            android:text="@string/description"
            android:textSize="@dimen/size_18sp"/>

        <android.support.v7.widget.GridLayout
            android:id="@+id/details_grid"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/description"
            android:padding="10dip"
            app:useDefaultMargins="true"
            app:columnCount="2"
            app:rowCount="9">

            <TextView
                android:paddingBottom="10dp"
                android:text="@string/book_details"
                android:textSize="@dimen/size_20sp"
                android:textStyle="bold"
                app:layout_columnSpan="2"
                app:layout_row="0"/>

            <TextView
                android:text="@string/publisher"
                android:textSize="@dimen/size_18sp"
                android:textStyle="bold"
                app:layout_column="0"
                app:layout_row="1"/>

            <TextView
                android:text="@string/by"
                android:textSize="@dimen/size_18sp"
                android:textStyle="bold"
                app:layout_column="0"
                app:layout_row="2"/>

            <TextView
                android:text="@string/isbn"
                android:textSize="@dimen/size_18sp"
                android:textStyle="bold"
                app:layout_column="0"
                app:layout_row="3"/>

            <TextView
                android:text="@string/year"
                android:textSize="@dimen/size_18sp"
                android:textStyle="bold"
                app:layout_column="0"
                app:layout_row="4"/>

            <TextView
                android:text="@string/pages"
                android:textSize="@dimen/size_18sp"
                android:textStyle="bold"
                app:layout_column="0"
                app:layout_row="5"/>


            <TextView
                android:id="@+id/publisher"
                android:text="@string/publisher"
                android:textSize="@dimen/size_18sp"
                app:layout_column="1"
                app:layout_row="1"/>

            <TextView
                android:ellipsize="none"
                android:id="@+id/by"
                android:text="@string/by"
                android:textSize="@dimen/size_18sp"
                android:layout_width="match_parent"
                app:layout_column="1"
                app:layout_row="2"/>

            <TextView
                android:id="@+id/isbn"
                android:text="@string/isbn"
                android:textSize="@dimen/size_18sp"
                app:layout_column="1"
                app:layout_row="3"/>

            <TextView
                android:id="@+id/year"
                android:text="@string/year"
                android:textSize="@dimen/size_18sp"
                app:layout_column="1"
                app:layout_row="4"/>

            <TextView
                android:id="@+id/pages"
                android:text="@string/pages"
                android:textSize="@dimen/size_18sp"
                app:layout_column="1"
                app:layout_row="5"/>

        </android.support.v7.widget.GridLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
